# macos_security

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .renovaterc.json5  404.html  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE.md  README.adoc  README.md  VERSION.yaml  _config.yml  astro.config.mjs  baselines  boilerplate-footer.html  cspell.json  custom  index.html  install.md  mscp.py  nist-header-footer.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  rules  schema  setup_project.sh  sitemap-0.xml  sitemap-index.xml
.github/: CODEOWNERS  CONTRIBUTING.md  Dockerfile  dependabot.yml  labeler.yaml  labels.yaml  project-names.txt  project-words.txt  renovate.json5
.github/ISSUE_TEMPLATE/: .bug_report.md.swp  bug_report.md  bug_report.yaml  config.yml  feature-proposal.md  feature-proposal.yaml  framework-request.yaml  rule-content-issue.yaml
.github/container/: Dockerfile  entrypoint.sh  mscp_check
.github/cspell/: cspell.json  (+2 more)
SCAP/: .gitignore  Makefile  README.md  SCAP-1.3.sch  excise.xsl  generate_cpe.sh  html-to-xccdf.xsl  macos-cpe-dictionary.xml  macos-cpe-oval.xml  ocil.xml  os.sh  version.sh  xccdf-to-ds.xsl  xccdf-to-html.xsl
_astro/: Code.CS_sHIe4.css  Code.CStMgggB.css  MobileTableOfContents.astro_astro_type_script_index_0_lang.hwBsy0Mo.js  Search.astro_astro_type_script_index_0_lang.BndYISCa.js  Search.astro_astro_type_script_index_0_lang.CfYcGagN.js  Search.astro_astro_type_script_index_0_lang.D3tJJ4GZ.js  Search.astro_astro_type_script_index_0_lang.Deq9_OSH.js  TableOfContents.astro_astro_type_script_index_0_lang.FuRcXuRY.js  common.Bk4yfJJU.css  common.C7WP0Qus.css  index.BCU7nNfN.css  index.BZH980De.css  index.CF4ROC9O.css  index.CFMLj-66.css  index.CM4-N_NM.css  index.CwBrgrdp.css  index.D3YRm-Dj.css  index.DwAQ05Lp.css  index.cVxOxN5Y.css  index.z4HaydKp.css  ui-core.Bc4QPfeb.js  ui-core.CK7w4eC0.js  ui-core.DmvsRQ-3.js  ui-core.DnwrgZhN.js
_includes/: NISTPagesFooter.html  NISTPagesHeader.html
_layouts/: default.html
api/: index.html
baselines/: 800-171.yaml  800-53_high.yaml  800-53_low.yaml  800-53_moderate.yaml  800-53r4_high.yaml  800-53r4_low.yaml  800-53r4_moderate.yaml  800-53r5_high.yaml  800-53r5_low.yaml  800-53r5_moderate.yaml  DISA STIG.yaml  DISA-STIG.yaml  all_rules.yaml  bsi_sys_macos_base.yaml  bsi_sys_macos_basis.yaml  bsi_sys_macos_high.yaml  bsi_sys_macos_standard.yaml  cis_lvl1.yaml  cis_lvl1_byod.yaml  cis_lvl1_enterprise.yaml  cis_lvl2.yaml  cis_lvl2_byod.yaml  cis_lvl2_enterprise.yaml  cisv8.yaml  cmmc_lvl1.yaml  cmmc_lvl2.yaml  cmmc_lvl3.yaml  cnssi-1253.yaml  cnssi-1253_high.yaml  cnssi-1253_low.yaml  cnssi-1253_moderate.yaml  cnssi.yaml  hicp_lp.yaml  high.yaml  indigo_base.yaml  indigo_high.yaml  ios_stig.yaml  ios_stig_byoad.yaml  low.yaml  moderate.yaml  (+3 more)
config/: babel.cfg  config.yaml  logging_config.yaml
custom/: .gitignore
docs/: MIGRATION.md  astro.config.mjs  package.json  pnpm-lock.yaml
includes/: 800-53_baselines.yaml  U_GPOS_SRG_V2R6_STIGTemplate.yaml  com.apple.alf.private_data.mobileconfig  discussions.yaml  enablePF-mscp.sh  mscp-data.yaml  odv.json  pwpolicy.xml  supported_payloads.yaml
legacy/: VERSION.yaml
mscp/: __init__.py
pagefind/: pagefind-entry.json  pagefind.en_1b266052c7.pf_meta  pagefind.en_2bcf41a37b.pf_meta  pagefind.en_2f91972ae5.pf_meta  pagefind.en_303a95c8f3.pf_meta  pagefind.en_32d456e62d.pf_meta  pagefind.en_35f89bb9cc.pf_meta  pagefind.en_46abb8d0e8.pf_meta  pagefind.en_4880e393a6.pf_meta  pagefind.en_49d5be6c96.pf_meta  pagefind.en_57e9b36a76.pf_meta  pagefind.en_5dfaf096b8.pf_meta  pagefind.en_6314f1b1e4.pf_meta  pagefind.en_8c1ea5feec.pf_meta  pagefind.en_ad19cd7f71.pf_meta  pagefind.en_be96ecc3da.pf_meta  pagefind.en_d1527df07d.pf_meta  pagefind.en_ec01df093b.pf_meta  pagefind.en_f69720ae76.pf_meta
public/: nist-combined.css
rules/: cis_lvl1.txt  cis_lvl2.txt
schema/: mscp_baseline.json  mscp_manifest.json  mscp_rule.json
schemas/: SV3_CKLB_1_0_JSON_SCHEMA.json  baseline.json  mscp_rule.json  rules.json  rules_v2.json  rules_v2.yaml
scripts/: 2.0-merge.py  KNOWN_ISSUES  baseline-identify.py  create_guide.py  csv_crosswalk.py  ensure_defaults_keys.sh  extract_localize_strings.py  gen_api_docs.py  generate_baseline.py  generate_guidance.py  generate_guidance_ios.py  generate_mapping.py  generate_oval.py  generate_scap.py  github-buttons.js  migrate_v1_to_v2.py  modify_rule.py  mscp  profile_generator.py  script_generator.py  util_create_srg_csv.py  util_stig_compare.py  util_stig_merge.py  utility_collect_branch_rules.sh  validate_rules.py  yaml-to-oval.py  yaml-to-xls.py
sections/: auditing.yaml  authentication.yaml  icloud.yaml  macos.yaml  not_applicable.yaml  passwordpolicy.yaml  permanent.yaml  settings.yaml  supplemental.yaml  systempreferences.yaml  visionos.yaml
templates/: adoc_acronyms.adoc  adoc_additional_docs.adoc  adoc_authors.adoc  adoc_foreword.adoc  adoc_header.adoc  adoc_rule.adoc  adoc_rule.orig  adoc_rule_custom_refs.adoc  adoc_rule_ios.adoc  adoc_rule_no_setting.adoc  adoc_rules_table_row.adoc  adoc_scope.adoc  adoc_section.adoc  asciidoctor-pdf.yml  asciidoctor.css  asciidoctor2.css  docinfo.html  mscp-theme.yml  title_page.adoc
tests/: conftest.py  test_markdown_tree.py  test_migration.py
(+3908 files in other folders)
